# youtube-bot

./: .gitignore  README.md  example.env  pyproject.toml
src/: main.py
src/common/: validator.py
src/configs/: config.py
src/controllers/: statistics_controller.py  summary_controller.py  thumbnail_controller.py
src/core/: tele_bot.py
src/handlers/: analyze_handler.py  download_handler.py  help_handler.py  summary_handler.py  thumbnail_handler.py
src/schemas/: video_schemas.py
src/services/: analyze_video.py  download_video.py  get_thumbnail.py  summary_video.py
src/utils/: get_id_video.py  get_thumbnail.py  logger.py  quality_score.py  summary_ai.py  transcript_video.py
